// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Dialog correctly applies the theme context className 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-header"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog orion-fusion-theme"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background alert"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="alert"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-high"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              />
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[MockFunction]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog functions as expected should open the dialog 1`] = `
<Example
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <div>
    <NotificationDialog
      acceptAction={
        Object {
          "onClick": [MockFunction],
          "text": "accept",
        }
      }
      buttonOrder="acceptFirst"
      custom={Object {}}
      dialogTitle="Test"
      emphasizedAction="none"
      isOpen={false}
      rejectAction={
        Object {
          "onClick": [MockFunction],
          "text": "reject",
        }
      }
      startMessage="This text is used to provide more details."
      variant="alert"
    >
      <AbstractModal
        aria-describedby="notification-dialog-title"
        aria-labelledby="notification-dialog-header"
        ariaLabel="Notification Dialog"
        classNameModal="notification-dialog orion-fusion-theme"
        classNameOverlay={null}
        closeOnEsc={false}
        closeOnOutsideClick={false}
        data-terra-notification-dialog={true}
        isFullscreen={false}
        isOpen={false}
        onRequestClose={[Function]}
        role="alertdialog"
        rootSelector="#root"
        zIndex="9000"
      />
    </NotificationDialog>
    <button
      data-test-button={true}
      onClick={[Function]}
      type="button"
    >
      Open Dialog
    </button>
  </div>
</Example>
`;

exports[`Notification Dialog shallow renders an alert notification-dialog 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background alert"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="alert"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-high"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders an custom notification-dialog 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background custom"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              iconClassName="custom-icon"
              variant="custom"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                Custom
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders an error notification-dialog 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background error"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="error"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.error"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders an info notification-dialog 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background info"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="info"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-low"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders an warning notification-dialog 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background warning"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="warning"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-medium"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders dialog with reject button first 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background alert"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="alert"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-high"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[MockFunction]}
              text="reject"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[MockFunction]}
              text="accept"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;

exports[`Notification Dialog shallow renders dialog with startMessage, content, and endMessage 1`] = `
<AbstractModal
  aria-describedby="notification-dialog-title"
  aria-labelledby="notification-dialog-header"
  ariaLabel="Notification Dialog"
  classNameModal="notification-dialog"
  classNameOverlay={null}
  closeOnEsc={false}
  closeOnOutsideClick={false}
  data-terra-notification-dialog={true}
  isFullscreen={false}
  isOpen={true}
  onRequestClose={[Function]}
  role="alertdialog"
  rootSelector="#root"
  zIndex="9000"
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": false,
        "escapeDeactivates": false,
        "returnFocusOnDeactivate": true,
      }
    }
    paused={false}
  >
    <div
      className="notification-dialog-inner-wrapper"
    >
      <div
        className="notification-dialog-container"
        tabIndex="0"
      >
        <div
          className="floating-header-background alert"
        />
        <div
          className="header"
        >
          <div
            className="header-content"
          >
            <NotificationDialogIcon
              variant="alert"
            />
            <div
              className="header-container"
            >
              <div
                className="signal-word"
                id="notification-dialog-signal-word"
              >
                <FormattedMessage
                  id="Terra.notification.dialog.hazard-high"
                  values={Object {}}
                />
              </div>
              <div
                className="title"
                id="notification-dialog-title"
              >
                Test
              </div>
            </div>
          </div>
        </div>
        <div
          className="body"
        >
          <div
            className="message"
          >
            This text is used to provide more details.
          </div>
          <div
            className="message"
          >
            <div>
              Middle content
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <div
            className="actions"
          >
            <Button
              data-terra-notification-dialog-button="accept"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="accept"
              onClick={[Function]}
              text="accept"
              type="button"
              variant="neutral"
            />
            <Button
              data-terra-notification-dialog-button="reject"
              isBlock={false}
              isCompact={false}
              isDisabled={false}
              isIconOnly={false}
              isReversed={false}
              key="reject"
              onClick={[Function]}
              text="reject"
              type="button"
              variant="neutral"
            />
          </div>
        </div>
      </div>
    </div>
  </FocusTrap>
</AbstractModal>
`;
